# nemesis-gnss-sim

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: bench_synthesis.py
docs/: attack_taxonomy.md  signal_model.md
nemesis_sim/: __init__.py  almanac.py  cli.py  constants.py  io.py  observations.py  rinex.py  simulator.py
nemesis_sim/atmosphere/: __init__.py  klobuchar.py  troposphere.py
nemesis_sim/attacks/: __init__.py  adversarial.py  base.py  meaconing.py  slow_drift.py
nemesis_sim/gui/: index.html  server.py
nemesis_sim/propagator/: __init__.py  clock.py  kepler.py  transforms.py
nemesis_sim/signal/: __init__.py  ca_code.py  synthesiser.py
scripts/: generate_dataset.py  validate_physics.py
tests/: conftest.py  test_atmosphere.py  test_attacks.py  test_ca_codes.py  test_cli.py  test_gui.py  test_io.py  test_propagator.py  test_rinex.py  test_simulator.py
