[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemesis-gnss-sim"
version = "0.1.0"
description = "Geodetic-accuracy GPS L1 C/A signal simulator with spoofing attack models for the NEMESIS research pipeline"
authors = [{ name = "Kavishka Gihan", email = "kavishka@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gnss", "gps", "spoofing", "signal-simulation", "sdr", "nemesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
viz = ["matplotlib>=3.5", "scipy>=1.9"]
all = ["nemesis-gnss-sim[dev,viz]"]

[project.urls]
Homepage = "https://github.com/kavishka-dot/nemesis-gnss-sim"
Repository = "https://github.com/kavishka-dot/nemesis-gnss-sim"
Issues = "https://github.com/kavishka-dot/nemesis-gnss-sim/issues"

[project.scripts]
nemesis-sim = "nemesis_sim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nemesis_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = false
